src/components/home/home.css
/*=============== GOOGLE FONTS ===============*/
@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Roboto:wght@400;500&display=swap");

/*=============== VARIABLES CSS ===============*/
:root {
  --header-height: 3.5rem;

  /*========== Colors ==========*/
  /*Color mode HSL(hue, saturation, lightness)*/
  --first-color: hsl(207, 65%, 65%);
  --title-color: hsl(207, 4%, 16%);
  --text-color: hsl(207, 4%, 28%);
  --text-color-light: hsl(207, 4%, 56%);
  --body-color: hsl(207, 4%, 99%);
  --container-color: hsl(207, 4%, 95%);

  /* Change the first number */
  /* Blue: 207 - Purple: 250 - Pink: 356 - Teal: 174 */
  --gradient-color: linear-gradient(180deg,
                      rgb(72, 88, 117),
                      hsla(207, 48%, 72%, 0));

  /*========== Font and typography ==========*/
  /*.5rem = 8px | 1rem = 16px ...*/
  --body-font: 'Roboto', sans-serif;
  --title-font: 'Lora', serif;
  --biggest-font-size: 1.5rem;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1rem;
  --normal-font-size: .938rem;
  --small-font-size: .813rem;
  --smaller-font-size: .75rem;
  --tiny-font-size: .625rem;

  /*========== Font weight ==========*/
  --font-medium: 500;
  --font-semi-bold: 600;

  /*========== z index ==========*/
  --z-normal: 1;
  --z-tooltip: 10;
  --z-fixed: 100;
}

/* Responsive typography */
@media screen and (min-width: 1024px) {
  :root {
    --biggest-font-size: 3rem;
    --h1-font-size: 2.25rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1rem;
    --small-font-size: .875rem;
    --smaller-font-size: .813rem;
    --tiny-font-size: .688rem;
  }
}

/*=============== BASE ===============*/
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  background-color: var(--body-color);
  color: var(--text-color);
}

h1, h2, h3 {
  color: var(--title-color);
  font-family: var(--title-font);
  font-weight: var(--font-medium);
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
  height: auto;
}

/*=============== THEME ===============*/
.nav__button{
  display: flex;
  align-items: center;
  column-gap: 1.5rem;
}

.change-theme{
  font-size: 1.25rem;
  color: var(--title-color);
  cursor: pointer;
  transition: color .3s;
}


/*=============== REUSABLE CSS CLASSES ===============*/
.container {
  max-width: 1024px;
  margin-inline: 1.5rem;
}

.grid {
  display: grid;
  gap: 1.5rem;
}

.section {
  padding-block: 2.5rem;
  width: 100%;
}

.section__border {
  border-bottom: 1px solid var(--title-color);
  padding-bottom: 3.5rem;
}

.section__title, 
.section__subtitle {
  text-align: center;
}

.section__title {
  font-size: var(--h1-font-size);
  font-weight: var(--font-semi-bold);
  margin-bottom: .25rem;
}

.section__subtitle {
  display: block;
  font-size: var(--small-font-size);
  color: var(--text-color-light);
  margin-bottom: 3rem;
}

.main {
  overflow: hidden; /* For animation */
}

/*=============== HEADER & NAV ===============*/
/* .header {
  width: 100%;
  position: fixed;
  bottom: 2rem;
  left: 0;
  z-index: var(--z-fixed);
}

.nav {
  height: calc(var(--header-height) + .5rem);
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--body-color);
  box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
  padding-inline: 1.5rem;
  border-radius: 3rem;
} */

.nav__logo {
  color: var(--title-color);
}

.nav__logo {
  font-family: var(--title-font);
  font-weight: var(--font-semi-bold);
}

/* @media screen and (max-width: 1023px){
  .nav__menu {
    position: fixed;
    width: 88%;
    left: 0;
    right: 0;
    bottom: -60%;
    margin: 0 auto;
    background-color: var(--body-color);
    box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
    padding: 2rem 1.5rem 5rem;
    border-radius: 2rem;
    transition: bottom .3s;
  }
} */

.nav__list {
  grid-template-columns: repeat(3, max-content);
  justify-content: center;
  gap: 2rem 3rem;
}

.nav__link {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: .25rem;
  font-size: var(--smaller-font-size);
  color: var(--text-color-light);
  transition: color .3s;
}

.nav__link:hover {
  color: var(--title-color);
}

.nav__link i {
  font-size: 1.25rem;
}


/*=============== HOME ===============*/
.home__container {
  row-gap: 4rem;
  padding-top: 2rem;
}

.home__data {
  row-gap: 1.5rem;
}

.home__title {
  text-align: center;
  font-size: var(--biggest-font-size);
  letter-spacing: .3px;
  margin-bottom: .5rem;
}

.home__blob {
  position: relative;
  width: 210px;
  height: 260px;
  background-color: var(--body-color);
  border: 2px solid var(--text-color-light);
  justify-self: center;
  border-radius: 6.5rem;
  place-items: center;
}

.home__profile {
  width: 170px;
  height: 230px;
  background: var(--gradient-color);
  border-radius: 5.75rem;
  overflow: hidden;
  display: flex;
  align-items: flex-end;
}

.home__profile img{
  width: 175px;
}

.home__shape-waves,
.home__shape-circle{
  position: absolute;
  opacity: .1;
}

.home__shape-waves{
  width: 50px;
  left: -1.5rem;
  top: 5rem;
}

.home__shape-circle{
  width: 150px;
  bottom: -2rem;
  right: -3rem;
  transform: rotate(15deg);
  z-index: -1;
}

.home__social{
  justify-self: center;
  display: flex;
  column-gap: 1.25rem;
}

.home__social-link{
  font-size: 1.25rem;
  color: var(--text-color-light);
  transition: color .3s;
}

.home__social-link:hover{
  color: var(--title-color);
}

.home__info{
  display: grid;
  row-gap: 2rem;
}

.home__info-title{
  font-family: var(--body-font);
  font-size: var(--smaller-font-size);
  font-weight: 400;
  color: var(--text-color-light);
  margin-bottom: 1rem;
}

.home__info-description,
.home__info-number{
  font-family: var(--title-font);
  color: var(--title-color);
}

.home__info-description{
  padding-right: 4rem;
}
/* ... */

